--- a/.github/workflows/release-canary.yml
+++ b/.github/workflows/release-canary.yml
@@ -31,21 +31,23 @@ jobs:
       - name: Set version
         run: npm --no-git-tag-version version ${{ env.PACKAGE_VERSION }}-canary.$(date +'%Y%m%d') -w packages/wallet-sdk
 
+      # Change to the wallet-sdk directory
+      - name: Change to wallet-sdk directory
+        run: cd packages/wallet-sdk
+        
       # Build the package
-      - name: Prebuild
-        run: yarn workspace @coinbase/wallet-sdk prebuild
+      - name: Prebuild Packages
+        run: yarn prebuild
 
       - name: Build Packages
-        run: yarn workspace @coinbase/wallet-sdk build
+        run: yarn build
 
       # Publish to npm
       - name: Set deployment token
         run: npm config set '//registry.npmjs.org/:_authToken' "${{ secrets.NPM_TOKEN }}"
 
       - name: Publish to npm
-        run: |
-          cd packages/wallet-sdk
-          npm publish --tag canary
+        run: npm publish --tag canary
         env:
           NPM_TOKEN: ${{ secrets.NPM_TOKEN }}
  
