update to yarn 4

--- a/packages/wallet-sdk/package.json
+++ b/packages/wallet-sdk/package.json
@@ -1,6 +1,6 @@
 {
   "name": "@coinbase/wallet-sdk",
-  "version": "4.3.2",
+  "version": "4.4.0-canary.20250402",
   "description": "Coinbase Wallet JavaScript SDK",
   "keywords": [
     "coinbase",
@@ -64,5 +64,6 @@
       "limit": "31 KB",
       "import": "*"
     }
-  ]
+  ],
+  "stableVersion": "4.3.2"
 }
