update canary scripts to use workspace

--- a/.github/workflows/release-canary.yml
+++ b/.github/workflows/release-canary.yml
@@ -30,24 +30,20 @@ jobs:
 
       - name: Set version
         run: yarn workspace @coinbase/wallet-sdk version ${{ env.PACKAGE_VERSION }}-canary.$(date +'%Y%m%d')
-
-      # Change to the wallet-sdk directory
-      - name: Change to wallet-sdk directory
-        run: cd packages/wallet-sdk
         
       # Build the package
       - name: Prebuild Packages
-        run: yarn prebuild
+        run: yarn workspace @coinbase/wallet-sdk prebuild
 
       - name: Build Packages
-        run: yarn build
+        run: yarn workspace @coinbase/wallet-sdk build
 
       # Publish to npm
       - name: Set deployment token
         run: npm config set '//registry.npmjs.org/:_authToken' "${{ secrets.NPM_TOKEN }}"
 
       - name: Publish to npm
-        run: yarn npm publish --tag canary
+        run: yarn workspace @coinbase/wallet-sdk npm publish --tag canary
         env:
           NPM_TOKEN: ${{ secrets.NPM_TOKEN }}
  
