update config sdk playgound  && fix  Dapp next  non build  unknow  loop back  to bug hex.

--- a/.github/workflows/release-canary.yml
+++ b/.github/workflows/release-canary.yml
@@ -40,7 +40,9 @@ jobs:
 
       # Publish to npm
       - name: Set deployment token
-        run: npm config set '//registry.npmjs.org/:_authToken' "${{ secrets.NPM_TOKEN }}"
+        run: npm config set '//registry.npmjs.org/:_authToken' "${NPM_TOKEN}"
+        env:
+          NPM_TOKEN: ${{ secrets.NPM_TOKEN }}
 
       - name: Publish to npm
         run: |
