--- a/.github/workflows/notification.yml
+++ b/.github/workflows/notification.yml
@@ -5,27 +5,29 @@ on:
     types: [opened, reopened]
 
 env:
-  CHANNEL_WALLET_FEEDBACK: ${{ vars.CHANNEL_WALLET_FEEDBACK }}
-  CHANNEL_WALLET_SQUAD_BUILD: ${{ vars.CHANNEL_WALLET_SQUAD_BUILD }}
-  ON_CALL_WALLET: ${{ vars.ON_CALL_WALLET }}
-  ON_CALL_BUILD_SQUAD: ${{ vars.ON_CALL_BUILD_SQUAD }}
+  CHANNEL_WALLET_FEEDBACK: ${{ secrets.CHANNEL_WALLET_FEEDBACK }}
+  CHANNEL_WALLET_SQUAD_BUILD: ${{ secrets.CHANNEL_WALLET_SQUAD_BUILD }}
+  ON_CALL_WALLET: ${{ secrets.ON_CALL_WALLET }}
+  ON_CALL_BUILD_SQUAD: ${{ secrets.ON_CALL_BUILD_SQUAD }}
+  SLACK_ENABLED: ${{ secrets.SLACK_ENABLED }}
 
 jobs:
   checks:
     runs-on: ubuntu-latest
     outputs:
-      skip: ${{ env.skip }}
+      skip: ${{ steps.set-skip.outputs.skip }}
     steps:
+    - id: set-skip
+      run: echo "skip=false" >> $GITHUB_ENV
     - name: Check spam labels
-      if: ${{ contains(github.event.*.labels.*.name, 'spam') }}
+      if: ${{ contains(github.event.issue.labels.*.name, 'spam') }}
       run: |
         echo "skip=true" >> $GITHUB_ENV
         echo "::error:: Spam label found."
         
   notify:
     runs-on: ubuntu-latest
-    needs: checks
-    if: ${{ vars.SLACK_ENABLED == 'true' && needs.checks.outputs.skip != 'true' }}
+    if: ${{ secrets.SLACK_ENABLED == 'true' && vars.SLACK_ENABLED == 'true' && needs.checks.outputs.skip != 'true' }}
     steps:
     - name: Set channel and mention
       run: |
