--- a/packages/wallet-sdk/package.json
+++ b/packages/wallet-sdk/package.json
@@ -32,6 +32,7 @@
   },
   "dependencies": {
     "@noble/hashes": "1.4.0",
+    "@vercel/analytics": "^1.5.0",
     "clsx": "1.2.1",
     "eventemitter3": "5.0.1",
     "idb-keyval": "6.2.1",
@@ -56,7 +57,7 @@
     "tsc-alias": "^1.8.8",
     "tslib": "^2.6.0",
     "typescript": "^5.1.6",
-    "vitest": "^3.0.5"
+    "vitest": "^3.1.1"
   },
   "size-limit": [
     {
