--- a/examples/testapp/package.json
+++ b/examples/testapp/package.json
@@ -21,6 +21,7 @@
     "@metamask/eth-sig-util": "^7.0.0",
     "framer-motion": "^10.13.1",
     "next": "^14.2.25",
+    "nuxt": "^3.16.2",
     "react": "^18.2.0",
     "react-dom": "^18.2.0",
     "react-hook-form": "7.45.2",
