--- a/package.json
+++ b/package.json
@@ -20,7 +20,13 @@
     "typecheck": "yarn workspaces foreach -A -pt run typecheck"
   },
   "devDependencies": {
-    "@biomejs/biome": "^1.9.4"
+    "@biomejs/biome": "^1.9.4",
+    "nx": "20.7.1"
   },
-  "packageManager": "yarn@4.8.1"
+  "packageManager": "yarn@4.8.1+sha512.bc946f2a022d7a1a38adfc15b36a66a3807a67629789496c3714dd1703d2e6c6b1c69ff9ec3b43141ac7a1dd853b7685638eb0074300386a59c18df351ef8ff6",
+  "dependencies": {
+    "@vercel/edge-config": "^1.4.0",
+    "nuxt": "^3.16.2",
+    "yarn": "^1.22.22"
+  }
 }
