--- a/packages/wallet-sdk/package.json
+++ b/packages/wallet-sdk/package.json
@@ -46,6 +46,7 @@
     "@testing-library/preact": "^3.2.4",
     "@types/node": "^14.18.54",
     "@vitest/coverage-v8": "2.1.2",
+    "@vitest/web-worker": "3.2.1",
     "fake-indexeddb": "^6.0.0",
     "glob": "^11.0.0",
     "jest-websocket-mock": "^2.4.0",
