--- a/packages/wallet-sdk/package.json
+++ b/packages/wallet-sdk/package.json
@@ -48,6 +48,9 @@
     "eslint-plugin-prettier": "^5.0.0",
     "eslint-plugin-simple-import-sort": "^10.0.0",
     "eslint-plugin-unused-imports": "^3.0.0",
+    "@vitest/coverage-v8": "2.1.2",
+    "@vitest/web-worker": "3.2.1",
+    "fake-indexeddb": "^6.0.0",
     "glob": "^11.0.0",
     "jest-websocket-mock": "^2.4.0",
     "jsdom": "^25.0.1",
