--- a/package.json
+++ b/package.json
@@ -11,8 +11,8 @@
     "apps/*"
   ],
   "scripts": {
-    "lint": "yarn workspaces foreach -pt run lint",
-    "typecheck": "yarn workspaces foreach -pt run typecheck",
+    "lint": "yarn workspaces foreach -Apt run lint",
+    "typecheck": "yarn workspaces foreach -Apt run typecheck",
     "dev": "yarn workspaces foreach -Aipv run dev",
     "release": "./scripts/release.sh"
   },
